WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234288
WebContent process crashes at ContentSecurityPolicySourceList::matchesAll
https://bugs.webkit.org/show_bug.cgi?id=234288
Summary
WebContent process crashes at ContentSecurityPolicySourceList::matchesAll
Kate Cheney
Reported
2021-12-13 20:18:41 PST
WebContent process crashes at ContentSecurityPolicySourceList::matchesAll
Attachments
Patch
(1.65 KB, patch)
2021-12-13 20:19 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-12-13 20:19:54 PST
Created
attachment 447100
[details]
Patch
EWS
Comment 2
2021-12-13 20:56:48 PST
Committed
r287011
(
245216@main
): <
https://commits.webkit.org/245216@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447100
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-13 20:57:19 PST
Comment hidden (obsolete)
<
rdar://problem/86449029
>
Kate Cheney
Comment 4
2021-12-14 05:42:08 PST
The correct radar is
rdar://problem/86438924
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug