Cherry-pick r287011. rdar://problem/86438924

WebContent process crashes at ContentSecurityPolicySourceList::matchesAll
    https://bugs.webkit.org/show_bug.cgi?id=234288
    rdar://problem/86438924

    Reviewed by Simon Fraser.

    * page/csp/ContentSecurityPolicyDirectiveList.cpp:
    (WebCore::ContentSecurityPolicyDirectiveList::violatedDirectiveForScript const):

    Canonical link: https://commits.webkit.org/245216@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287011 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245169.2@safari-613.1.12-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.12-branch@287042 268f45cc-cd09-0410-ab3c-d52691b4dbfc